@@ -1,70 +1,73 @@
 package covid.analise.virusanalisator;
 
 import covid.analise.virusanalisator.gui.ProcessInfo;
+import covid.analise.virusanalisator.logger.Logger;
 import covid.analise.virusanalisator.obtaining.Data;
 import covid.analise.virusanalisator.obtaining.VirusCollection;
 import covid.analise.virusanalisator.obtaining.VirusPrototype;
 import org.springframework.stereotype.Component;
-import javax.swing.*;
 import java.io.File;
 import java.io.IOException;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
-import java.util.Date;
 import java.util.HashSet;
 import java.util.List;
 import java.util.concurrent.ExecutorService;
 import java.util.concurrent.Executors;
 import java.util.concurrent.TimeUnit;
 import java.util.stream.Collectors;
+import java.util.zip.DataFormatException;
 
 @Component
-public class MainProcess {
+public class ProcessConductor {
 
     private final Data data;
     private final VirusSlicer virusSlicer;
     private final SequenceCollection sequenceCollection;
     private final CombineGenome combineGenome;
     private final ProcessInfo processInfo;
-    private String destinationUrl;
+    private final Logger logger;
 
-    MainProcess(Data data, VirusSlicer virusSlicer,
-                SequenceCollection sequenceCollection, CombineGenome combineGenome, ProcessInfo processInfo){
+    ProcessConductor(Data data,
+                     VirusSlicer virusSlicer,
+                     SequenceCollection sequenceCollection,
+                     CombineGenome combineGenome,
+                     ProcessInfo processInfo, Logger logger){
         this.data = data;
         this.virusSlicer = virusSlicer;
         this.sequenceCollection = sequenceCollection;
         this.combineGenome = combineGenome;this.processInfo = processInfo;
+        this.logger = logger;
     }
+
 
     public void startWork(){
-        try {
-            data.getResources();
-            createDirectory();
-            VirusCollection virusCollection=data.getVirusCollection();
-            startProcessing(virusCollection);
-            String result =combineGenome.analisePiecesAndGetResult(sequenceCollection.getBestSequencesAsMap());
-            System.out.println("write results");
-            recordResults(result);
-            processInfo.setStatus("Done!");
-        }catch (Exception e){
-            JOptionPane.showMessageDialog(null,e.getMessage(),"Error",1);
-        }
+
+        VirusCollection virusCollection= data.getVirusCollection();
+
+        startProcessing(virusCollection);
+
+        String result =combineGenome.analisePiecesAndGetResult(sequenceCollection.getBestSequencesAsMap());
+
+        recordResults(result);
+        processInfo.setStatus("Done!");
+
     }
 
-    public void createDirectory(){
-        destinationUrl=processInfo.getDestinationUrl();
-        destinationUrl+=File.separator+new Date().toString().replaceAll(" ","_").replaceAll(":","-");
-        new File(destinationUrl).mkdir();
-    }
+
 
     private void startProcessing(VirusCollection virusCollection){
         ExecutorService service= Executors.newFixedThreadPool(Runtime.getRuntime().availableProcessors());
         HashSet<VirusPrototype> workSet;
 
-        if(processInfo.isUseNGenomes())     workSet=virusCollection.getViruses();
+
+
+        if(processInfo.isUseNGenomes()) workSet=virusCollection.getViruses();
         else workSet=virusCollection.getVirusesWithoutN();
+
+        virusCollection.destroy();          //TODO ???
 
         for(VirusPrototype virus:workSet){
             service.submit(() -> {
@@ -74,22 +77,23 @@ public class MainProcess {
         }
         service.shutdown();
         try {
-            service.awaitTermination(2, TimeUnit.DAYS);
+            if(service.awaitTermination(10000, TimeUnit.DAYS)){
+                System.out.println("Sorry you were waiting for too long...");
+            }
         } catch (InterruptedException e) {
             e.printStackTrace();
         }
     }
 
     private void recordResults(String res){
-        try {
-            System.out.println(destinationUrl);
-            String url=destinationUrl+File.separator+"results.json";
-            new File(url).createNewFile();
-            Path path = Paths.get(url);
+        try {                               //TODO
+            String url=logger.getOutputDir().toString()+File.separator+"results.json";
+
+            Path path = Files.createFile(Path.of(url));
             List<String> strings=res.lines().collect(Collectors.toList());
             Files.write(path, strings, StandardCharsets.UTF_8);
         } catch (IOException e) {
-            e.printStackTrace();
+            logger.addProgramError("Error 2: error writing results");
         }
     }
 
